tests/snapshots/scenarios_001_page_index_hierarchy_expected_parent_chain.json.snap
---
source: test
expression: value
---
{
  "root": {
    "node_id": "docs/alpha#alpha",
    "parent_id": null,
    "known": true
  },
  "beta": {
    "node_id": "docs/alpha#alpha---beta",
    "parent_id": "docs/alpha#alpha",
    "known": true
  },
  "gamma": {
    "node_id": "docs/alpha#alpha---beta---gamma",
    "parent_id": "docs/alpha#alpha---beta",
    "known": true
  }
}