tests/snapshots/scenarios_001_page_index_hierarchy_expected_tree.json.snap
---
source: test
expression: value
---
{
  "nodes": [
    {
      "node_id": "docs/alpha#alpha",
      "title": "Alpha",
      "level": 1,
      "text": "alpha root section carries enough words to remain stable without thinning across the page index builder path today.",
      "summary": null,
      "line_range": [
        1,
        4
      ],
      "token_count": 18,
      "is_thinned": false,
      "children": [
        {
          "node_id": "docs/alpha#alpha---beta",
          "title": "Beta",
          "level": 2,
          "text": "beta child section also carries enough words to preserve its nested heading tree and keep gamma visible beneath it.",
          "summary": null,
          "line_range": [
            5,
            8
          ],
          "token_count": 19,
          "is_thinned": false,
          "children": [
            {
              "node_id": "docs/alpha#alpha---beta---gamma",
              "title": "Gamma",
              "level": 3,
              "text": "Gamma body.",
              "summary": null,
              "line_range": [
                9,
                12
              ],
              "token_count": 2,
              "is_thinned": false,
              "children": []
            }
          ]
        },
        {
          "node_id": "docs/alpha#alpha---delta",
          "title": "Delta",
          "level": 2,
          "text": "Delta body.",
          "summary": null,
          "line_range": [
            13,
            15
          ],
          "token_count": 2,
          "is_thinned": false,
          "children": []
        }
      ]
    }
  ]
}
