tests/snapshots/scenarios_004_page_index_refresh_expected_incremental_refresh.json.snap
---
source: test
expression: value
---
{
  "initial": {
    "nodes": [
      {
        "node_id": "docs/refresh#refresh",
        "title": "Refresh",
        "level": 1,
        "text": "refresh root body carries enough words to avoid thinning before incremental updates arrive.",
        "summary": null,
        "line_range": [
          1,
          3
        ],
        "token_count": 13,
        "is_thinned": false,
        "children": []
      }
    ]
  },
  "refreshed": {
    "nodes": [
      {
        "node_id": "docs/refresh#refresh",
        "title": "Refresh",
        "level": 1,
        "text": "refresh root body carries enough words to avoid thinning before incremental updates arrive.",
        "summary": null,
        "line_range": [
          1,
          4
        ],
        "token_count": 13,
        "is_thinned": false,
        "children": [
          {
            "node_id": "docs/refresh#refresh---added",
            "title": "Added",
            "level": 2,
            "text": "Fresh branch.",
            "summary": null,
            "line_range": [
              5,
              7
            ],
            "token_count": 2,
            "is_thinned": false,
            "children": []
          }
        ]
      }
    ]
  }
}