tests/snapshots/skeleton_rerank_strict_mode_filters.json.snap
---
source: test
expression: value
---
{
  "count": 1,
  "validated_hits": [
    {
      "anchor_id": "test_doc.md#intro-id",
      "vector_score": 0.8,
      "is_valid": true,
      "doc_id": "test_doc.md",
      "anchor": "intro-id",
      "structural_path": [
        "Introduction"
      ],
      "reranked_score": 0.9
    }
  ]
}