tests/snapshots/skeleton_rerank_valid_anchors_boosted.json.snap
---
source: test
expression: value
---
{
  "count": 2,
  "validated_hits": [
    {
      "anchor_id": "test_doc.md#intro-id",
      "vector_score": 0.8,
      "is_valid": true,
      "doc_id": "test_doc.md",
      "anchor": "intro-id",
      "structural_path": [
        "Introduction"
      ],
      "reranked_score": 0.9
    },
    {
      "anchor_id": "test_doc.md#storage-id",
      "vector_score": 0.75,
      "is_valid": true,
      "doc_id": "test_doc.md",
      "anchor": "storage-id",
      "structural_path": [
        "Architecture",
        "Storage"
      ],
      "reranked_score": 0.85
    }
  ]
}