tests/snapshots/skill_vfs_manifest_loaded_expected_result.json.snap
---
source: test
expression: value
---
{
  "manifest_id": "xiuxian.zhixing.agenda.add",
  "tool_name": "agenda.add",
  "workflow_type": "qianji_flow",
  "workflow_matches_enum": true,
  "internal_id": "xiuxian.native.zhixing.add",
  "qianhuan_background": "$wendao://skills-internal/agenda/SKILL.md",
  "flow_definition": "$wendao://skills-internal/agenda/references/add/qianji.toml",
  "annotations": {
    "read_only": false,
    "destructive": true,
    "idempotent": false,
    "open_world": true
  }
}